Исправлены контроллеры Salary. Добавлена новая схема БД. Потестить - выбрать одну из двух
